--- a/網頁/AboutUsPage/AboutUsPage.m.css
+++ b/網頁/AboutUsPage/AboutUsPage.m.css
@@ -378,6 +378,7 @@ button{
 	margin-top: 125%;
 	font-size: 3.2rem;
 	color: #00627E;
+	font-weight: 500;
 }
 
 .Guan{
@@ -420,6 +421,7 @@ button{
 	margin-top: 125%;
 	font-size: 3.2rem;
 	color: #00627E;
+	font-weight: 500;
 }
 .Chang{
 	position: absolute;
@@ -462,6 +464,7 @@ button{
 	font-size: 3.2rem;
 	color: #00627E;
 	text-align: center;
+	font-weight: 500;
 }
 .Tseng{
 	position: absolute;
@@ -504,6 +507,7 @@ button{
 	font-size: 3.2rem;
 	color: #00627E;
 	text-align: center;
+	font-weight: 500;
 }
 
 @media (min-device-width: 1280px) and (max-device-width: 1500px){
