--- a/網頁/ConvertPage/ConvertPageAll.css
+++ b/網頁/ConvertPage/ConvertPageAll.css
@@ -898,24 +898,25 @@ button{
 	align-items: center;
 	justify-content: center;
 
-	
 }
 table{
 	width: 100%;
 	height: 100%;
-	border: 2px solid black;
-	border-radius: 10px;
-	background-color: #fff;
-	
-	
-	
+	border: 0px solid black;
+	border-radius: 2.5px;
+	background-color: #333;
 	
 }
 tr{
 	height: 20%;
+	background-color: #fff;
 }
 td{
 	width: 16.6%;
+	background-color: #fff;
+	text-align: center;
+	font-size: 2.4rem;
+	line-height: 0;
 }
 .Img{
 	margin-left: auto;
@@ -1364,7 +1365,7 @@ td{
 	align-items: center;
 	justify-content: flex-start;
 }
-.MidlineEvil{
+.Midline{
 	position: absolute;
 	left: 50%;
 	margin-top: 0%;
@@ -1420,16 +1421,7 @@ td{
 	align-items: center;
 	justify-content: flex-start;
 }
-.MidlineNormal{
-	position: absolute;
-	left: 50%;
-	margin-top: 0%;
-	width: 0%;
-	height: 90%;
-	border-right: solid 6px #000;
-	border-radius: 3px ;
-	opacity: 0.8;
-}
+
 .Co2Angel{
 	position: absolute;
 	z-index: 9;
@@ -1476,16 +1468,7 @@ td{
 	align-items: center;
 	justify-content: flex-start;
 }
-.MidlineAngel{
-	position: absolute;
-	left: 50%;
-	margin-top: 0%;
-	width: 0%;
-	height: 90%;
-	border-right: solid 6px #000;
-	border-radius: 3px ;
-	opacity: 0.8;
-}
+
 .view4{
 	position: absolute;
 	z-index: 20;
