--- a/part4.css
+++ b/part4.css
@@ -338,7 +338,7 @@
 	height: 100%;
   	-webkit-transition: transform 2s;
   	-webkit-transform-style: preserve-3d;
-	backface-visibility: hidden;
+	opacity: 1;
   	cursor: pointer;
 	
 }
@@ -348,7 +348,6 @@
 	height: 100%;
   	-webkit-transition: transform 2s;
   	-webkit-transform-style: preserve-3d;
-	backface-visibility: hidden;
   	cursor: pointer;
 	
 }
@@ -363,7 +362,6 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	backface-visibility: hidden;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 	
@@ -381,7 +379,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	backface-visibility: hidden;
+	opacity: 1;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 	
@@ -500,7 +498,6 @@
 	height: 100%;
   	-webkit-transition: transform 2s;
   	-webkit-transform-style: preserve-3d;
-	backface-visibility: hidden;
   	cursor: pointer;
 	
 }
@@ -515,7 +512,6 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	backface-visibility: hidden;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 
@@ -530,7 +526,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	backface-visibility: hidden;
+	opacity: 1;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 
@@ -654,8 +650,8 @@
 	height: 100%;
   	-webkit-transition: transform 2s;
   	-webkit-transform-style: preserve-3d;
-	backface-visibility: hidden;
   	cursor: pointer;
+	opacity: 1;
 	
 }
 .oilfront, .oilback {
@@ -668,7 +664,6 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	backface-visibility: hidden;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 
@@ -683,7 +678,6 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	backface-visibility: hidden;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 
@@ -817,8 +811,8 @@
 	height: 100%;
   	-webkit-transition: transform 2s;
   	-webkit-transform-style: preserve-3d;
-	backface-visibility: hidden;
   	cursor: pointer;
+	opacity: 1;
 }
 .lifefront, .lifeback {
 	position: absolute;
@@ -830,7 +824,6 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	backface-visibility: hidden;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 
@@ -845,7 +838,6 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	backface-visibility: hidden;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 
