--- a/part4.css
+++ b/part4.css
@@ -338,7 +338,7 @@
 	height: 100%;
   	-webkit-transition: transform 2s;
   	-webkit-transform-style: preserve-3d;
-	opacity: 1;
+	backface-visibility: hidden;
   	cursor: pointer;
 	
 }
@@ -348,6 +348,7 @@
 	height: 100%;
   	-webkit-transition: transform 2s;
   	-webkit-transform-style: preserve-3d;
+	backface-visibility: hidden;
   	cursor: pointer;
 	
 }
@@ -362,6 +363,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	backface-visibility: hidden;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 	
@@ -379,7 +381,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	opacity: 1;
+	backface-visibility: hidden;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 	
@@ -498,6 +500,7 @@
 	height: 100%;
   	-webkit-transition: transform 2s;
   	-webkit-transform-style: preserve-3d;
+	backface-visibility: hidden;
   	cursor: pointer;
 	
 }
@@ -512,6 +515,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	backface-visibility: hidden;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 
@@ -526,7 +530,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	opacity: 1;
+	backface-visibility: hidden;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 
@@ -574,6 +578,7 @@
 	text-align: center;
 	-webkit-text-size-adjust:none;
 }
+
 
 .oil{
 	position: absolute;
@@ -649,8 +654,8 @@
 	height: 100%;
   	-webkit-transition: transform 2s;
   	-webkit-transform-style: preserve-3d;
+	backface-visibility: hidden;
   	cursor: pointer;
-	opacity: 1;
 	
 }
 .oilfront, .oilback {
@@ -663,6 +668,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	backface-visibility: hidden;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 
@@ -677,6 +683,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	backface-visibility: hidden;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 
@@ -810,8 +817,8 @@
 	height: 100%;
   	-webkit-transition: transform 2s;
   	-webkit-transform-style: preserve-3d;
+	backface-visibility: hidden;
   	cursor: pointer;
-	opacity: 1;
 }
 .lifefront, .lifeback {
 	position: absolute;
@@ -823,6 +830,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	backface-visibility: hidden;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 
@@ -837,6 +845,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	backface-visibility: hidden;
   	background-color: rgba(172,211,210,0.95);
 	overflow: hidden;
 
@@ -895,6 +904,8 @@
 	text-align: center;
 	-webkit-text-size-adjust:none;
 }
+
+
 
 .bottom{
 	position: absolute;
